--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -33,11 +33,16 @@ security:
 
             # https://symfony.com/doc/current/security/impersonating_user.html
             # switch_user: true
-
+    role_hierarchy:
+        ROLE_PREMIUM: ROLE_USER
+        ROLE_JORNALISTA: ROLE_PREMIUM
+        ROLE_ADMIN: ROLE_JORNALISTA
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-        # - { path: ^/admin, roles: ROLE_ADMIN }
+        - { path: ^/usuario, roles: ROLE_USER }
+        - { path: ^/nova, roles: ROLE_JORNALISTA }
+        - { path: ^/admin, roles: ROLE_ADMIN }
         # - { path: ^/profile, roles: ROLE_USER }
 
 when@test:
